<resources>
    <string name="app_name">Nyimbo Za Kristo</string>

    <string name="sample_song_number">12</string>
    <string name="sample_title">Msifu Mungu</string>
    <string name="sample_church_hymnal_no">C.H. 683</string>
    <string name="sample_title_eng">Praise God From Whom</string>
    <string name="sample_writer">Louis Bourgeois</string>
    <string name="sample_key">Doh is G</string>
    <string name="sample_lyrics">
        Msifu Mungu wa neema, \nEnyi Viumbe po pote;  \nWa juu pia sifuni     \nBaba, Mwana naye Roho!
    </string>

    <string name="app_icon">App Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    
    <color name="nzk">#ffff85</color>
</resources>
